# organizator-server-actix

./: .gitignore  Cargo.toml  README.md  build_static.sh
src/: check_security_middleware.rs  config.rs  db.rs  errors.rs  main.rs  models.rs  password.rs  routes.rs
src/ddl/: filestore.sql
src/server_sql/: create_full_text_index.sql  file_user_access.sql  get_memo_function.sql  memo_group_user_access_function.sql  memo_read_function.sql  memo_write_function.sql
src/sql/: explicit_permissions.sql  get_all_memo_titles.sql  get_all_users.sql  get_file_security.sql  get_memo.sql  get_user.sql  insert_filestore.sql  login.sql  memo_groups_for_user.sql  search_memo.sql  update_password.sql
