[package]
name = "organizator-server"
version = "0.1.0"
description = "Actix-web backend for Organizator"
authors = ["Ovidiu Ionescu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
serde = { version = "1", features = ["derive"] }
actix-rt = "1"
tokio-postgres = "0.5"
env_logger = "0.7"
deadpool-postgres = "0.5.5"
tokio-pg-mapper = { version = "0.1.4", features = ["derive"] }
derive_more = "0.99"
dotenv = "0.15.0"
config = "0.10"
log = "*"
actix-service = "*"
actix-session="*"
futures = "*"
ring="*"
data-encoding="*"
